--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "leaflet": "^1.9.4",
     "react": "^18.2.0",
+    "react-animations": "^1.0.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.12.0",
     "react-spring": "^9.7.1"
   },
